# schema_salad

./: setup.py
schema_salad/: codegen.py  rust_ast.py  rust_codegen.py
schema_salad/rust/: Cargo.toml
schema_salad/rust/macro/: Cargo.toml
schema_salad/rust/macro/src/: ext.rs  lib.rs  util.rs
schema_salad/rust/macro/src/codegen/: enums.rs  mod.rs  structs.rs  units.rs
schema_salad/rust/macro/src/input/: attrs.rs  enums.rs  mod.rs  structs.rs
schema_salad/rust/macro/src/metadata/: attrs.rs  mod.rs
schema_salad/rust/salad-core/: Cargo.toml
schema_salad/rust/salad-core/crates/dsl/: Cargo.toml
schema_salad/rust/salad-core/crates/macro/: Cargo.toml
schema_salad/rust/salad-core/crates/macro/src/: lib.rs  util.rs
schema_salad/rust/salad-core/crates/macro/src/codegen/: cblock.rs  mod.rs
schema_salad/rust/salad-core/crates/macro/src/codegen/enumeration/: de.rs  mod.rs
schema_salad/rust/salad-core/crates/macro/src/codegen/structure/: de.rs  mod.rs
schema_salad/rust/salad-core/crates/macro/src/model/: attributes.rs  enumeration.rs  ident.rs  mod.rs  structure.rs
schema_salad/rust/salad-core/crates/macro/src/util/: ext.rs  mod.rs  str_ext.rs  string.rs  type_ext.rs
schema_salad/rust/salad-core/crates/serde/: Cargo.toml
schema_salad/rust/salad-core/crates/serde/src/: data.rs  lib.rs
schema_salad/rust/salad-core/crates/serde/src/de/: list.rs  map.rs  mod.rs
schema_salad/rust/salad-core/crates/types/: Cargo.toml
schema_salad/rust/salad-core/crates/types/src/: error.rs  lib.rs  util.rs
schema_salad/rust/salad-core/crates/types/src/any/: de.rs  deser.rs  mod.rs  object.rs
schema_salad/rust/salad-core/crates/types/src/common/: names.rs  primitive_type.rs
schema_salad/rust/salad-core/crates/types/src/primitive/: mod.rs  string.rs
schema_salad/rust/salad-core/crates/types/src/util/: mod.rs
schema_salad/rust/salad-core/src/: lib.rs
schema_salad/rust/src/: lib.rs
schema_salad/rust/src/core/: any.rs  mod.rs  object.rs  string.rs
schema_salad/rust/src/core/any/: mod.rs  object.rs
schema_salad/rust/src/core/primitive/: mod.rs  string.rs
schema_salad/rust/src/de/: list.rs  mod.rs  seed.rs
schema_salad/rust/src/private/: mod.rs
schema_salad/rust/src/private/de/: list.rs  mod.rs  util.rs
schema_salad/rust/src/private/dsl/: de_impl.rs  map_access.rs  mod.rs
schema_salad/rust/src/util/: mod.rs
schema_salad/rust/src/util/de/: list.rs  mod.rs
