[package]
name = "{package_name}"
version = "{package_version}"
rust-version = "1.66.1"
publish = false
edition = "2021"

[features]
#! #### DSL Preprocessor features
## Enable the DSL preprocessor (requires `dsl_json` or `dsl_yaml`)
dsl = []
## Enable the DSL preprocessor with all extensions
dsl_full = ["dsl", "dsl_http", "dsl_json", "dsl_yaml"]
## Enable the DSL preprocessor's HTTP support
dsl_http = ["dsl", "dep:ureq"]
## Enable the DSL preprocessor's JSON support
dsl_json = ["dsl", "dep:serde_json"]
## Enable the DSL preprocessor's YAML support
dsl_yaml = ["dsl", "dep:serde_yaml"]

#! #### Multi-thread features
## Enable support for O(1) cloning in a multi-threaded environment
arc = []

[dependencies]
compact_str = { version = "0.7", features = [ "serde" ] }
document-features = "0.2"
fxhash = "0.2"
schema_salad-macro = { path = "./macro" }
serde = "1.0"

# DSL Preprocessor dependencies
ureq = { version = "2.9", features = ["gzip", "tls"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
