[package]
name = "salad-macro"
version = "0.1.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[lib]
proc-macro = true

[dependencies]
compact_str.workspace = true
fxhash.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = [
    "derive",
    "parsing",
    "printing",
    "proc-macro",
] }
